--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-972.3KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-794.4KB/s(Youtube:不良林), server: 167.88.61.213, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-822.8KB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 167.88.61.213, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 167.88.61.213, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇯🇵 日本-1.13MB/s(Youtube:不良林), server: 85.208.108.59, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-1.26MB/s(Youtube:不良林), server: 85.208.108.59, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-985.8KB/s(Youtube:不良林), server: 85.208.108.60, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇨🇦 加拿大-2.07MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.15MB/s(Youtube:不良林), server: 85.208.108.60, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-391.9KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.91MB/s(Youtube:不良林), server: 85.208.108.59, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-516.2KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-507.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-427.0KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-313.8KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-972.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-972.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-972.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-972.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-972.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-972.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-972.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
