--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-391.9KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 167.88.61.213, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-507.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-427.0KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-313.8KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-516.2KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-934.7KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇺🇸 美国-1023.6KB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-608.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-427.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
