--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
   - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-516.2KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-934.7KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-1023.6KB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
   - {name: 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-3.99MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-658.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇸🇬 新加坡-681.7KB/s(Youtube:不良林), server: s102.s2022.xyz, port: 33767, type: trojan, password: a32bc6bc-8b4e-38b0-bef9-3172cf52ca3b, sni: s102.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.32MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 1c3dd378-6dc3-3a81-8461-ae927cd6fb7c, sni: sg1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-583.7KB/s(Youtube:不良林), server: 20.205.120.214, port: 12388, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-658.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-681.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-583.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-658.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-681.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-583.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-658.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-681.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-583.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-583.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-658.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-681.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-583.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-658.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-681.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-583.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-658.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-681.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-583.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活1天)香港-3.82MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-506.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1023.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-635.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-658.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-681.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-583.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
